# cloud-store

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  GEMINI.md  README.md  docker-compose.prod.yml  docker-compose.yml  flake.nix  justfile  nginx.conf
.gemini/: settings.json
.github/: copilot-instructions.md
.github/agents/: impl-worker.agent.md
.github/instructions/: rust-backend.instructions.md
.github/prompts/: add-feature.prompt.md
crates/admin-frontend/: Cargo.toml  Dioxus.toml
crates/admin-frontend/assets/: main.css
crates/admin-frontend/i18n/: en-US.ftl  zh-CN.ftl
crates/admin-frontend/src/: api.rs  main.rs  models.rs
crates/admin-frontend/src/pages/: login.rs  mod.rs
crates/admin-frontend/src/pages/dashboard/: guests.rs  instances.rs  mod.rs  nat_port_leases.rs  nodes.rs  overview.rs  plans.rs  tickets.rs
crates/frontend/: Cargo.toml  Dioxus.toml
crates/frontend/assets/: main.css
crates/frontend/i18n/: en-US.ftl  zh-CN.ftl
crates/frontend/src/: api.rs  main.rs  models.rs
crates/frontend/src/pages/: auth.rs  dashboard.rs  mod.rs  public.rs
crates/frontend/src/pages/dashboard/: balance.rs  mod.rs  profile.rs  services.rs  shell.rs  tickets.rs
crates/frontend/src/terminal/: cell.rs  component.rs  grid.rs  mod.rs  parser.rs
crates/provider-adapter/: Cargo.toml
crates/provider-adapter/src/: lib.rs
crates/shared-domain/: Cargo.toml
crates/shared-domain/src/: lib.rs
crates/web-app/: Cargo.toml
crates/web-app/assets/: app.css
crates/web-app/src/: admin.rs  auth.rs  billing.rs  instances.rs  main.rs  routes.rs  sse_test.rs  tickets.rs
crates/web-app/src/payment/: paypal.rs
crates/worker/: Cargo.toml
crates/worker/src/: main.rs
migrations/: 0001_init.sql  0001_initial_schema.sql  0002_balance_tickets_autorenew.sql  0002_seed_nat_plans.sql  0003_balance_purchase_type.sql  0003_invoice_expiry.sql  0004_balance_transaction_order_id.sql  0004_single_admin_constraint.sql  0005_admin_mvp_basics.sql  0005_order_status_refunded.sql  0006_instances_and_nodes.sql  0007_plan_details.sql  0008_fix_zero_cpu.sql  0009_plan_cpu_allowance.sql  0010_instance_root_password.sql  0011_nat_mappings.sql  0012_plan_nat_limit.sql  0014_add_unknown_status.sql
scripts/: cluster_deploy.sh  deploy_incus.sh
