[workspace]
members = [
    "crates/web-app",
    "crates/frontend",
    "crates/admin-frontend",
    "crates/shared-domain",
    "crates/worker",
    "crates/provider-adapter",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["cloud_store team"]

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "multipart", "ws"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
config = "0.15"
dioxus = { version = "0.7.4", features = ["router"] }
dioxus-motion = "0.3.3"
dotenvy = "0.15"
futures-util = "0.3"
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
sha2 = "0.10"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "uuid",
    "chrono",
    "rust_decimal",
    "macros",
] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
rust_decimal = { version = "1", features = ["serde"] }
