[package]
name = "admin-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dioxus = { workspace = true, features = ["router", "web"] }
dioxus-motion.workspace = true
dioxus-i18n = "0.5.1"
reqwest = { workspace = true }
serde.workspace = true
serde_json.workspace = true
unic-langid = { version = "0.9.6", features = ["macros"] }
urlencoding = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    "Location",
    "KeyboardEvent",
    "WebSocket",
    "BinaryType",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "console",
    "HtmlInputElement",
    "HtmlSelectElement",
    "Document",
    "Element",
    "EventSource",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
