[package]
name = "frontend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
dioxus = { workspace = true, features = ["router", "web"] }
reqwest = { workspace = true }
gloo-timers = { version = "0.3", features = ["futures"] }
serde.workspace = true
serde_json = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage", "Location"] }
