[package]
name = "frontend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
dioxus = { workspace = true, features = ["router", "web"] }
dioxus-motion.workspace = true
reqwest = { workspace = true }
gloo-timers = { version = "0.3", features = ["futures"] }
serde.workspace = true
serde_json = { workspace = true }
vte = "0.14"
gloo-net = "0.6"
futures-util = "0.3"
futures-channel = "0.3"
dioxus-i18n = "0.5.1"
unic-langid = { version = "0.9.6", features = ["macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    "Location",
    "KeyboardEvent",
    "WebSocket",
    "BinaryType",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "console",
    "HtmlInputElement",
    "HtmlSelectElement",
    "Document",
    "Element",
    "EventSource",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
