[package]
name = "provider-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
rcgen = "0.14.7"
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
shared-domain = { path = "../shared-domain" }
uuid.workspace = true
