[package]
name = "worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
dotenvy.workspace = true
provider-adapter = { path = "../provider-adapter" }
sqlx.workspace = true
shared-domain = { path = "../shared-domain" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { workspace = true, features = ["v4"] }
rust_decimal = { workspace = true, features = ["serde"] }
